--- a/pybossa/pybossa/themes/default/templates/projects/tasks.html
+++ b/pybossa/pybossa/themes/default/templates/projects/tasks.html
@@ -14,25 +14,31 @@
                 <hr>
                 {{ helper.render_overall_progress(project, n_tasks, overall_progress, show_contribute_btn=False, show_n_tasks=True) }}
                 <hr>
-                {% if project.owner_id == current_user.id or (current_user.is_authenticated() and current_user.admin)%}
                 <div class="row-fluid">
+                    {% if project.owner_id == current_user.id or (current_user.is_authenticated() and current_user.admin)%}
                     <div id="import_tasks" class="span6 well">
                         <h2><i class="icon-upload"></i> {{_('Import Tasks')}}</h2>
                         <p>{{_('Import tasks from templates, GDrive, or CSV')}}</p>
                         <a href="{{url_for('project.import_task', short_name=project.short_name)}}" class="btn btn-primary">{{_('Import')}} <i class="icon-chevron-right"></i></a>
                     </div>
+		    {% endif %}
+                    {% if project.owner_id == current_user.id or current_user.admin or current_user.subadmin %}
                     <div id="export_tasks" class="span6 well">
                         <h2><i class="icon-download"></i> {{_('Export Tasks')}}</h2>
                         <p>{{_('Export tasks to JSON, CSV or a CKAN server')}}</p>
                         <a href="{{url_for('project.export_to', short_name=project.short_name)}}" rel="nofollow" class="btn btn-primary">{{_('Export')}} <i class="icon-chevron-right"></i></a>
                     </div>
+		    {% endif %}
                 </div>
                 <div class="row-fluid">
+		    {% if project.owner_id == current_user.id or current_user.admin or current_user.subadmin %}
                     <div id="task_presenter" class="span6 well">
                         <h2><i class="icon-edit"></i> {{_('Task Presenter')}}</h2>
                         <p>{{_('Edit the task presenter')}}</p>
                         <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name)}}" class="btn btn-primary">{{_('Editor')}} <i class="icon-chevron-right"></i></a>
                     </div>
+                    {% endif %}
+                    {% if project.owner_id == current_user.id or current_user.admin %}
                     <div id="task_settings" class="span6 well">
                         <h2><i class="icon-cog"></i> {{_('Settings')}}</h2>
                         <p>{{_('Configure the task scheduler, redundancy, etc.')}}</p>
@@ -40,14 +46,17 @@
                             short_name=project.short_name)}}" class="btn
                             btn-primary">{{_('Settings')}} <i class="icon-chevron-right"></i></a>
                     </div>
+		    {% endif %}
                 </div>
                 <div class="row-fluid">
+		    {% if project.owner_id == current_user.id or current_user.admin or current_user.subadmin %}
                     <div id="task_browse" class="span6 well">
                         <h2><i class="icon-road"></i> {{_('Browse')}}</h2>
                         <p>{{_('Check the status of the tasks')}}</p>
                         <a href="{{url_for('project.tasks_browse',
                             short_name=project.short_name)}}" class="btn btn-primary">{{_('Browse')}} <i class="icon-chevron-right"></i></a>
                     </div>
+		    {% endif %}
                     {% if current_user.pro or current_user.admin %}
                     <div id="autoimport_tasks" class="span6 well">
                         <h2><i class="icon-upload"></i> {{_('Auto-import Tasks')}}</h2>
@@ -56,21 +65,6 @@
                     </div>
                     {% endif %}
                 </div>
-                {% else %}
-                <div class="row-fluid">
-                    <div id="task_browse" class="span6 well">
-                        <h2><i class="icon-road"></i> {{_('Browse')}}</h2>
-                        <p>{{_('Check the status of the tasks')}}</p>
-                        <a href="{{url_for('project.tasks_browse',
-                            short_name=project.short_name)}}" class="btn btn-primary">{{_('Browse')}} <i class="icon-chevron-right"></i></a>
-                    </div>
-                    <div id="export_tasks" class="span6 well">
-                        <h2><i class="icon-download"></i> {{_('Export Tasks')}}</h2>
-                        <p>{{_('Export tasks to JSON, CSV or a CKAN server')}}</p>
-                        <a href="{{url_for('project.export_to', short_name=project.short_name)}}" rel="nofollow" class="btn btn-primary">{{_('Export')}} <i class="icon-chevron-right"></i></a>
-                    </div>
-                </div>
-                {% endif %}
             </div><!-- span9 -->
         </div>
 {% else %}
