--- a/pybossa/pybossa/themes/default/templates/admin/index.html
+++ b/pybossa/pybossa/themes/default/templates/admin/index.html
@@ -65,7 +65,7 @@ function report_handler() {
                     {{ _('Manage') }} <i class="icon-chevron-right"></i>
                 </a>
             </div>
-            <div id="`subadminusers" class="span6 well">
+            <div id="subadminusers" class="span6 well">
                 <h2><i class="icon-user"></i> {{_('Subadministrators')}}</h2>
                 <p>{{_('Manage subadministrators')}}</p>
                 <a href="{{url_for('admin.subadminusers')}}" class="btn btn-primary">
